# si2-space-invaders

./: .gitignore  README.md  Sandbox.py  agent.pkl  config-feedforward.txt  config.txt  config_finetune.txt  main_fitness_evolution.txt  mini_fitness_evolution.txt  pyproject.toml  winner.pkl  winner_075.pkl  winner_075_v2.pkl  winner_075_v3.pkl  winner_075_v4.pkl  winner_100.pkl  winner_100_v2.pkl  winner_100_v3.pkl  winner_100_v4.pkl  winner_goated_behaviour.pkl  winner_sniper.pkl
agents/: README.md  __init__.py  all_win_agent.py  base_agent.py  dummy_agent.py  manual_agent.py  ml_agent.py  ml_agent2.py  new_agent.py  train.py  train2.py  train2_finetune.py
docs/: SI2_SpaceInvaders_115129_114279.tex
server/: __init__.py  logic.py  server.py
server/viewer/: index.html  script.js  styles.css
tests/: test_logic.py
utils/: fitness_evo.py
